Como usar nossa biblioteca do Google Sign In

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -19,8 +20,17 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "http://livetouchdev.com.br:8082/nexus/content/repositories/releases/"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    compile 'com.google.android.gms:play-services-plus:8.1.0'
+    compile 'br.livetouch.android:AndroidUtils:1.1.48-TESTE20151005113152@aar'
 }
